Remove claro workaround code for Toolbar height, which was making Toolbar labels too big.   Refs #10659, fixes #11127.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22140 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/Toolbar.css
+++ b/themes/claro/Toolbar.css
@@ -8,7 +8,6 @@
 	background-repeat:repeat-x;
 	padding: 2px 0px 2px 4px;
 	zoom: 1;
-	font-size: medium;
 }
 
 .claro .dijitToolbar label {
